--- a/content-calendar/src/main/resources/application.properties
+++ b/content-calendar/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+# spring.h2.console.enabled=true
+# spring.datasource.generate-unique-name=false
+# spring.datasource.name=content
 
+spring.datasource.url=jdbc:postgresql://127.0.0.1:53723/postgres
+spring.datasource.username=postgres
+spring.datasource.password=password
